--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h1 class="logo-title">Minegahara Coffee</h1>
         </div>
         <ul>
-          <li><a href="index.html">Home </a></li>
+          <li><a href="#hero">Home </a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#menu">Menu</a></li>
           <li><a href="#ratings">Reviews</a></li>
@@ -40,7 +40,7 @@
         </ul>
       </div>
 
-      <div class="hero">
+      <div class="hero" id="hero">
         <div class="info">
           <h1>Start Your Fresh Day With <br />A Fresh Coffee</h1>
           <p>
