--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
       </div>
     </main>
     <div class="footer">
-      <p>&copy; 2024. Minegahara Coffee <br />All rights reserved.</p> 
+      <p>&copy; 2024. Minegahara Coffee <br />All rights reserved.</p>
     </div>
   </body>
   <script src="script.js"></script>
@@ -101,18 +101,5 @@
     crossorigin="anonymous"
   ></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    var btnSubmit = document.querySelector(".submit");
-    var modal = document.querySelector(".modal-container");
-
-    if (btnSubmit) {
-      btnSubmit.addEventListener("click", () => {
-        modal.classList.add("show");
-
-        const next = documenr.querySelector(".next");
-        next.setAttribute("value", "https://aryasatya-blog.netlify.app/");
-      });
-    }
-    AOS.init();
-  </script>
+  <script src="contact.js"></script>
 </html>
